# ijepa

./: main.py  main_distributed.py  pyproject.toml
src/ijepa/: helper.py  train.py  transforms.py
src/ijepa/models/: vision_transformer.py
