[project]
name = "ijepa"
version = "0.1.0"
requires-python = "~=3.12.7"
dependencies = []

[dependency-groups]
dev = [
    "pyright>=1.1.408",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ijepa"]

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
extraPaths = ["src"]
