[project]
name = "ijepa"
version = "0.1.0"
requires-python = "~=3.12.7"
dependencies = [
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]

[dependency-groups]
dev = []

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ijepa"]

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "standard"
reportOptionalMemberAccess = false
